[package]
name = "rust-beam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
memorable-wordlist = "0.1.7"
rand_word = "0.1.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
