[package]
name = "rust-beam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.4", features = ["derive"] }
copypasta = "0.10.1"
crossterm = "0.28.1"
indicatif = "0.17.8"
memorable-wordlist = "0.1.7"
rand = "0.8.5"
rand_word = "0.1.18"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
spake2 = "0.4.0"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
dotenv = "0.15.0"
